--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>My Protfolio</title>
 </head>
+<body>
 <div class="header">
    <h1>
      <a href="/">Nikhil Prince</a>
@@ -24,6 +25,26 @@
                 </li>
             </ul>
         </header>
+        <a name="About-Me"></a>
+        <section>
+            <h2>
+                About Me
+            </h2>
+            <photo style="float:left;">
+                <img src="Image/IMG_3314.jpeg" alt="my profile picture">
+            </photo>
+            <p>
+                Hi, my name is Nikhil and I just started my journey as a full stack developer. I have lived in Arizona since 2006 and I am excited to see how much I progress through out this course.
+            </p>
+        </section>
+<section>
+    <a name="Projects"></a>
+    <h3 id="section">
+        Projects
+
+    </h3>
+</section>
+</body>
 </div>
       
 </div>
