--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>My Protfolio</title>
+    <title>My Portfolio</title>
 </head>
 <body>
 <div class="header">
-   <h1>
-     <a href="/">Nikhil Prince</a>
-   </h1>
         <header id="information">
             <ul>
                 <li>
@@ -27,22 +24,30 @@
         </header>
         <a name="About-Me"></a>
         <section>
-            <h2>
+            <h1>
                 About Me
-            </h2>
+            </h1>
             <photo style="float:left;">
-                <img src="Image/IMG_3314.jpeg" alt="my profile picture">
+                <img src="Image/IMG_3314.jpeg" alt="my-picture">
             </photo>
             <p>
                 Hi, my name is Nikhil and I just started my journey as a full stack developer. I have lived in Arizona since 2006 and I am excited to see how much I progress through out this course.
             </p>
         </section>
-<section>
-    <a name="Projects"></a>
-    <h3 id="section">
-        Projects
 
-    </h3>
+<section>
+    <div class="work" class="work"> </div>
+    <div class="title-work">
+        <h3>
+            work
+        </h3>
+    </div>
+</section>
+
+<section>
+    <div class="Future-projects">
+        <div class="calender">
+    </div>
 </section>
 </body>
 </div>
