Header fixed and nav bar lining up properly

--- a/index.html
+++ b/index.html
@@ -7,48 +7,34 @@
     <link rel="stylesheet" href="style.css" />
     <title>My Portfolio</title>
 </head>
+
 <body>
-<div class="header">
-        <header id="information">
+    <!--Header-->
+<header>
+    <h1>
+        <a>Nikhil Prince</a>
+    </h1>
+    
+    <!--Nav bar (Projects, About Me and Contact info)-->
+        <nav>
             <ul>
                 <li>
                     <a href="#Projects">Projects</a>
                 </li>
+
                 <li>
-                     <a href="#About Me">About Me</a>
+                     <a href="#About-Me">About Me</a>
                 </li>
+
                  <li>
                     <a href="#Contact">Contact</a>
                 </li>
             </ul>
-        </header>
-        <a name="About-Me"></a>
-        <section>
-            <h1>
-                About Me
-            </h1>
-            <photo style="float:left;">
-                <img src="Image/IMG_3314.jpeg" alt="my-picture">
-            </photo>
-            <p>
-                Hi, my name is Nikhil and I just started my journey as a full stack developer. I have lived in Arizona since 2006 and I am excited to see how much I progress through out this course.
-            </p>
-        </section>
+        </nav>
+</header>
 
-<section>
-    <div class="work" class="work"> </div>
-    <div class="title-work">
-        <h3>
-            work
-        </h3>
-    </div>
-</section>
+<!--Introduction-->
 
-<section>
-    <div class="Future-projects">
-        <div class="calender">
-    </div>
-</section>
 </body>
 </div>
       
