--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>My Portfolio</title>
   </head>
 
@@ -43,7 +43,7 @@
         </div>
 
         <div class="text">
-            <img src="Assets/Images/headshot.jpeg" class="headshot"/>
+            <img src="Images/headshot.jpeg" class="headshot"/>
             <p style="border-style: double">
               Hello! My name is Nikhil Prince, and I just started my journey as a web developer. Below are some projects that I worked on or worked on. Thanks for checking out my page.
             </p>
